--- a/exchange-cli/Jenkinsfile
+++ b/exchange-cli/Jenkinsfile
@@ -19,5 +19,14 @@ pipeline {
         }
       }
     }
+
+    stage ('Unit Tests') {
+      steps {
+        dir ('exchange-cli') {
+          sh "npm run test:unit"
+        }
+      }
+    }
+
   }
 }
