--- a/simple-calculator/Jenkinsfile
+++ b/simple-calculator/Jenkinsfile
@@ -16,9 +16,19 @@ pipeline {
                 }
             }
         }
+        stage('Check Style') {
+            steps {
+                dir('simple-calculator') {
+                    sh './mvnw clean checkstyle:check'
+                }
+            }
+        }
     }
     post {
-        always {
+        failure {
+            sendFailureAlert('team@example.com')
+        }
+         always {
             sendNotification('finished', 'team@example.com')
         }
     }
@@ -30,3 +40,8 @@ void sendNotification(String action, String email) {
         body: "The following pipeline ${action}: ${env.BUILD_URL}"
 }
 
+void sendFailureAlert(String email) {
+    mail to: "${email}",
+        subject: "Pipeline failed: ${currentBuild.fullDisplayName}",
+        body: "The following pipeline failed: ${env.BUILD_URL}"
+}
